[package]
name = "LearnAboutMigrations"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm-migration = "1.1.10"
sea-orm= {version = "1.1.10" , features = ["sqlx-postgres","runtime-tokio-rustls","macros"]}
actix-web = "4"
actix-service = "2.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
envr = "0.1.4"
dotenv = "0.15.0"
env_logger = "0.11.8"
chrono = "0.4.40"
migration = { path = "./migration" }
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
futures-util = "0.3.31"
